; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/routed/extr_trace.c_ts.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/routed/extr_trace.c_ts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@ts.s = internal global [20 x i8] zeroinitializer, align 16
@epoch = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @ts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ts(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @epoch, i32 0, i32 0), align 8
  %4 = load i32, i32* %2, align 4
  %5 = sext i32 %4 to i64
  %6 = add nsw i64 %5, %3
  %7 = trunc i64 %6 to i32
  store i32 %7, i32* %2, align 4
  %8 = call i64 @ctime(i32* %2)
  %9 = add nsw i64 %8, 11
  %10 = call i32 @memcpy(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @ts.s, i64 0, i64 0), i64 %9, i32 8)
  store i8 0, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @ts.s, i64 0, i64 8), align 8
  ret i8* getelementptr inbounds ([20 x i8], [20 x i8]* @ts.s, i64 0, i64 0)
}

declare dso_local i32 @memcpy(i8*, i64, i32) #1

declare dso_local i64 @ctime(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
